--- a/templates/register.html
+++ b/templates/register.html
@@ -4,5 +4,6 @@
     First Name: <input type="text" name="firstname"><br>
     Last Name: <input type="text" name="lastname"><br>
     Email: <input type="text" name="email"><br>
+    Address: <input type="text" name="address"><br>
     <input type="submit" value="Register">
 </form>
